remove monitoring options that should never be used
Signed-off-by: Ludovic Orban <lorban@bitronix.be>